--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,11 +1,13 @@
 .promo {
     min-height: 100vh;
     position: relative;
-    background: url('../img/main_bg.jpg') no-repeat 50%/cover;
+    background: url('https://t4.ftcdn.net/jpg/02/25/16/75/360_F_225167589_FHxfWWr96xXOrOBowtydCaklzluZmzcs.webp') no-repeat 50%/cover;
+    background-position-y: -100px;
     padding-top: 205px;
-    &__title {
+    .title {
         width: 535px;
         margin-top: 10px;
+        color: #fff
     }
     &__subtitle {
         position: relative;
@@ -20,10 +22,10 @@
         width: 250px;
     }
     &__link {
-        color: #000000;
+        color: #fff;
         font-weight: 700;
         &:hover {
-            color: #000000;
+            color: #fff;
             text-decoration: none;
         }
     }
