--- a/src/sass/blocks/_sidepannel.scss
+++ b/src/sass/blocks/_sidepannel.scss
@@ -10,7 +10,7 @@
     left: 50px;
     &__link {
         &:hover {
-            box-shadow: 3px 3px 20px #000;
+            box-shadow: 3px 3px 20px #fff;
         }
     }
     &__divider {
@@ -19,6 +19,7 @@
         background-color: #000;
     }
     &__text {
+        color: #000;
         height: 150px;
         width: 25px;
         span {
