--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -10,7 +10,14 @@
         font-size: 16px;
         line-height: 24px;
     }
+    &_fz20 {
+        font-style: 20px;
+        line-height: 30px;
+    }
     &_fz48 {
         font-size: 48px;
+    }
+    &_fz36 {
+        font-size: 36px;
     }
 }
